--- a/project-2/index.html
+++ b/project-2/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>valentine-project</title>
 </head>
 <body>
+    <div class="valentine-container">
+        <div class="valentine-box">
+        </div>
+        <div  class="valentine-smallbox">
+<div class="valentine-text">
+    <h3>SPECIAL OFFER</h3>
     
+</div>
+<p>subscribe and receive a 70%
+    discount on your next purchase
+</p>
+
+
+        </div>
+    </div>
 </body>
 </html>
