--- a/project-2/index.html
+++ b/project-2/index.html
@@ -10,6 +10,16 @@
 <body>
     <div class="valentine-container">
         <div class="valentine-box">
+            <div class="valentine-woman-box">
+                <img class="valentine-women" src="image/women.png" alt="">
+
+            </div>
+            
+            <h2>SPECIAL OFFER</h2>
+            <h3>70% OFF</h3>
+            <div class="valentine-form-box">
+                <button id="valentine-btnsend1">GET IT</button>
+            </div>
         </div>
         <div  class="valentine-smallbox">
 <div class="valentine-text">
@@ -19,8 +29,17 @@
 <p>subscribe and receive a 70%
     discount on your next purchase
 </p>
+<!-- <h4>Email</h4> -->
 
+<!-- <input type="text" placeholder="email"> -->
 
+<div class="valentine-form-box">
+<label for="email">Email</label>
+<input type="text" name="email" id="valentine-email" placeholder="email" required>
+</div>
+<div class="valentine-form-box">
+    <button id="valentine-btnsend">SUBSCRIBE</button>
+</div>
         </div>
     </div>
 </body>
