--- a/project-1/index.html
+++ b/project-1/index.html
@@ -9,19 +9,19 @@
 </head>
 <body> 
 
-<div class="valentine-banner-container">
-    <div class="valentine-banner">
-        <div class="valentine-book">
+<div class="valentinecode-banner-container">
+    <div class="valentinecode-banner">
+        <div class="valentinecode-book">
 
-            <img class="shoe" src="image/shoe (1).png" alt="book">
+            <img class="valentinecode-shoe" src="image/shoe (1).png" alt="shoe">
         </div>
-        <div class="content">
+        <div class="valentinecode-content">
 <!-- <span>upto</span> -->
 <h3>GET 35% DISCOUNT</h3>
 <p>Black friday coupon code</p>
 <h5>COUPON35</h5>
-<div class="cover"></div>
-<a href="#" class="btn">CLICK TO COPY</a>
+<div class="valentinecode-cover"></div>
+<a href="#" class="valentinecode-btn">CLICK TO COPY</a>
 <h4>Remeber to apply it on checkout</h4>
   </div>
 
