--- a/project-1/index.html
+++ b/project-1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,26 +8,30 @@
     <link rel="stylesheet" href="style.css ">
     <title>valentine-project</title>
 </head>
-<body> 
 
-<div class="valentinecode-banner-container">
-    <div class="valentinecode-banner">
-        <div class="valentinecode-book">
+<body>
 
-            <img class="valentinecode-shoe" src="image/shoe (1).png" alt="shoe">
+    <div class="valentinecode-banner-container">
+        <div class="valentinecode-banner">
+            <!-- shoe div -->
+            <div class="valentinecode-book">
+<!-- shoe img -->
+                <img class="valentinecode-shoe" src="image/shoe (1).png" alt="shoe">
+            </div>
+            <!-- text content -->
+            <div class="valentinecode-content">
+    
+                <h3>GET 35% DISCOUNT</h3>
+                <p>Black friday coupon code</p>
+                <h5>COUPON35</h5>
+                <div class="valentinecode-cover"></div>
+                <a href="#" class="valentinecode-btn">CLICK TO COPY</a>
+                <h4>Remeber to apply it on checkout</h4>
+            </div>
+
         </div>
-        <div class="valentinecode-content">
-<!-- <span>upto</span> -->
-<h3>GET 35% DISCOUNT</h3>
-<p>Black friday coupon code</p>
-<h5>COUPON35</h5>
-<div class="valentinecode-cover"></div>
-<a href="#" class="valentinecode-btn">CLICK TO COPY</a>
-<h4>Remeber to apply it on checkout</h4>
-  </div>
-
     </div>
-</div>
-     
+
 </body>
+
 </html>
