--- a/project-1/index.html
+++ b/project-1/index.html
@@ -10,17 +10,18 @@
 </head>
 
 <body>
-
+    <!-- container -->
     <div class="valentinecode-banner-container">
+        <!-- banner -->
         <div class="valentinecode-banner">
             <!-- shoe div -->
             <div class="valentinecode-book">
-<!-- shoe img -->
+                <!-- shoe img -->
                 <img class="valentinecode-shoe" src="image/shoe (1).png" alt="shoe">
             </div>
             <!-- text content -->
             <div class="valentinecode-content">
-    
+
                 <h3>GET 35% DISCOUNT</h3>
                 <p>Black friday coupon code</p>
                 <h5>COUPON35</h5>
