--- a/project-1/index.html
+++ b/project-1/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css ">
-    <title>valentine-project</title>
+    <title>Coupon display with copy button</title>
 </head>
 
 <body>
@@ -17,17 +17,17 @@
             <!-- shoe div -->
             <div class="valentinecode-book">
                 <!-- shoe img -->
-                <img class="valentinecode-shoe" src="image/shoe (1).png" alt="shoe">
+                <img class="valentinecode-image" class="valentinecode-shoe" src="image/shoe (1).png" alt="shoe">
             </div>
             <!-- text content -->
             <div class="valentinecode-content">
 
-                <h3>GET 35% DISCOUNT</h3>
-                <p>Black friday coupon code</p>
-                <h5>COUPON35</h5>
+                <h3 class="valentinecode-get">GET 35% DISCOUNT</h3>
+                <p class="valentinecode-friday">Black friday coupon code</p>
+                <h5 class="valentinecode-coupon">COUPON35</h5>
                 <div class="valentinecode-cover"></div>
                 <a href="#" class="valentinecode-btn">CLICK TO COPY</a>
-                <h4>Remeber to apply it on checkout</h4>
+                <h4 class="valentinecode-remeber">Remeber to apply it on checkout</h4>
             </div>
 
         </div>
