--- a/project-2/index.html
+++ b/project-2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,38 +8,41 @@
     <link rel="stylesheet" href="style.css">
     <title>valentine-project</title>
 </head>
+
 <body>
-    <div class="valentine-container">
-        <div class="valentine-box">
-            <div class="valentine-woman-box">
-                <img class="valentine-women" src="image/women.png" alt="">
+    <div class="valentinecode-container">
+        <div class="valentinecode-box">
+            <div class="valentinecode-woman-box">
+                <img class="valentinecode-women" src="image/women.png" alt="">
 
             </div>
-            
-            <h2>SPECIAL OFFER</h2>
-            <h3>70% OFF</h3>
-            <div class="valentine-form-box">
-                <button id="valentine-btnsend1">GET IT</button>
+
+            <h2 class="valentinecode-offer">SPECIAL OFFER</h2>
+            <h3 class="valentinecode-special">70% OFF</h3>
+            <div class="valentinecode-form-box">
+                <button class="valentinecode-btnsend1">GET IT</button>
             </div>
         </div>
-        <div  class="valentine-smallbox">
-<div class="valentine-text">
-    <h3>SPECIAL OFFER</h3>
-    
-</div>
-<p>subscribe and receive a 70%
-    discount on your next purchase
-</p>
+        <div class="valentinecode-smallbox">
+            <!-- text -->
+            <div class="valentinecode-text">
+                <h3 class="valentinecode-special">SPECIAL OFFER</h3>
+
+            </div>
+            <p class="valentinecode-subscribe">subscribe and receive a 70%
+                discount on your next purchase
+            </p>
 
 
-<div class="valentine-form-box">
-<label for="email">Email</label>
-<input type="text" name="email" id="valentine-email" placeholder="email" required>
-</div>
-<div class="valentine-form-box">
-    <button id="valentine-btnsend">SUBSCRIBE</button>
-</div>
+            <div class="valentinecode-form-box">
+                <label class="valentinecode-emailtext" for="email">Email</label>
+                <input type="text" class="valentinecode-email" name="email" placeholder="email" required>
+            </div>
+            <div class="valentinecode-form-box">
+                <button class="valentinecode-btnsend">SUBSCRIBE</button>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
