--- a/project3/index.html
+++ b/project3/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project3</title>
-</head>
-<body>
-    <div class="valentine-form-box">
-        <button id="valentine-btnsend1">GET IT</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+
+    <title>Full call to action bar</title>
+  </head>
+  <body>
+    <!-- main container -->
+    <div class="valentinecode-container">
+      <!-- bar -->
+      <div class="valentinecode-bar">
+        <!-- text container -->
+        <div class="valentinecode-text">
+          <div class="valentinecode-vertical-container">
+            <!-- icon -->
+            <div class="valentinecode-icon">
+              <i class="ri-firefox-line"></i>
+            </div>
+            <!-- text content -->
+            <div class="valentinecode-text-content">
+              <h4 class="content">
+                Get our brand new copywriting ebook for free
+              </h4>
+            </div>
+
+            <!-- button -->
+
+            <div class="valentinecode-btn">
+              <button class="valentinecode-button">Send It To Me</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
