--- a/project/index4.html
+++ b/project/index4.html
@@ -24,7 +24,7 @@
       </head>
       <body>
         <!-- main container -->
-        <div class="valentinecode-container">
+        <div class="valentinecode-boxcontainer">
           <!-- bar -->
           <div class="valentinecode-bar">
             <!-- text container -->
@@ -63,7 +63,7 @@
                 <!-- button -->
 
                 <div class="valentinecode-btn">
-                  <button class="valentinecode-button">Send It To Me</button>
+                  <button class="valentinecode-button">Get It Now</button>
                 </div>
               </div>
             </div>
