--- a/project/index3.html
+++ b/project/index3.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- main container -->
-    <div class="valentinecode-container">
+    <div class="valentinecode-boxcontainer">
       <!-- bar -->
       <div class="valentinecode-bar">
         <!-- text container -->
