--- a/project/index18.html
+++ b/project/index18.html
@@ -10,21 +10,42 @@
   <body>
     <div class="valentinecode-mainbooking">
       <div class="valentinecode-bookingcontainer">
-        <div class="valentinecode-mainbookingcontainer1"></div>
+        <div class="valentinecode-mainbookingcontainer1">
+          <div class="valentinecode-mainshoes">
+            <img
+              class="valentinecode-mainshoe"
+              src="image/shoe (1).png"
+              alt="shoe"
+            />
+          </div>
+        </div>
+
+        <!-- second container -->
         <div class="valentinecode-mainbookingcontainer2">
-          <h2 class="valentinecode-meet">Let's meet 1-on-1 and discuss how</h2>
+          <div class="valentinecode-meets">
+            <h2 class="valentinecode-meet">
+              Let's meet 1-on-1 and discuss how
+            </h2>
+          </div>
+          <div class="valentinecode-mainbookingcontainer3">
+            <h2 class="valentinecode-sales">
+              Our sales piping system can help you
+            </h2>
+          </div>
+          <div class="valentinecode-mainbookingcontainer4">
+            <h2 class="valentinecode-revenue">
+              Increase your sales and revenue
+            </h2>
+          </div>
+          <div class="valentinecode-book">
+            <div class="valentinecode-books">
+              <h2 class="valentinecode-bookss">BOOK AN APPOINTMENT</h2>
+            </div>
+          </div>
+          <div class="valentinecode-powered">
+            <h4 class="valentinecode-by">Powered by Konvata</h4>
+          </div>
         </div>
-        <div class="valentinecode-mainbookingcontainer3">
-          <h2 class="valentinecode-sales">
-            Our sales piping system can help you
-          </h2>
-        </div>
-        <div class="valentinecode-mainbookingcontainer4">
-          <h2 class="valentinecode-revenue">
-            Our sales piping system can help you
-          </h2>
-        </div>
-        <div class="valentinecode-book"></div>
       </div>
     </div>
   </body>
